# bitsery-test

./: CMakeLists.txt  main.cpp  nrfdl_types.h  sdfu_codec.cpp  sdfu_codec.h  sdfu_codec_bitsery.h  sdfu_types.h  test_sdfu.cpp
